Adjusting page overflow issue, refining announcement box for tablets and mobile

--- a/themes/twentytwentyone-child/style.css
+++ b/themes/twentytwentyone-child/style.css
@@ -44,6 +44,10 @@ body a.skip-link.screen-reader-text
 /****************************************
  * GLOBAL SUPER-HEADER *
 ****************************************/
+#page
+{
+	overflow-x:hidden;
+}
 .super-header
 {
 	background: #f2f2f2;
@@ -532,7 +536,7 @@ body .metaslider .slides img
 	/*desktop header styles*/
 	.quicklinks
 	{
-		top:0;
+		top:95px;
 	}
 	/*desktop navigation styles*/
 	.primary-navigation > div > .menu-wrapper
@@ -596,10 +600,10 @@ body .metaslider .slides img
 	.gridbreak
 	{
 		position: absolute;
-		top: -3em;
-		right: -90px;
-		width: 500px;
-		z-index: 0;
+    top: -3em;
+    right: -10%;
+    width: 50%;
+    z-index: 0;
 	}
 	.gridbreak_parent
 	{
